# net-copy

./: CMakeLists.txt  README.md  analysis_GPT-OSS_120B.txt  build.sh  build_auto_detect.bat  build_externals.bat  build_project.bat  build_vs_cli.bat  file_manager.cpp
.github/: CONTRIBUTING.md
build_vs/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  NetCopy.slnx  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  clean_all.vcxproj  clean_all.vcxproj.filters  client.conf  cmake_install.cmake  key.pem  net_copy_admin.vcxproj  net_copy_admin.vcxproj.filters  net_copy_client.vcxproj  net_copy_client.vcxproj.filters  net_copy_common.vcxproj  net_copy_common.vcxproj.filters  net_copy_gui.vcxproj  net_copy_gui.vcxproj.filters  net_copy_server.vcxproj  net_copy_server.vcxproj.filters  net_copy_service.vcxproj  net_copy_service.vcxproj.filters  rebuild_all.vcxproj  rebuild_all.vcxproj.filters  ssh_host_ec_key  ssh_host_rsa_key  ssh_host_rsa_key.der  ssh_host_rsa_key.pub  wolfssh.vcxproj  wolfssh.vcxproj.filters
build_vs/Release/: net_copy_admin.exp  net_copy_admin.lib  net_copy_client.exp  net_copy_client.lib  net_copy_gui.exp  net_copy_gui.lib  net_copy_server.exp  net_copy_server.lib  wolfssh.lib
build_vs/net_copy_admin.dir/Release/: net_copy_admin.exe.recipe
build_vs/net_copy_admin.dir/Release/net_copy_admin.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_vs/net_copy_client.dir/Release/: net_copy_client.exe.recipe
build_vs/net_copy_client.dir/Release/net_copy_client.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_vs/net_copy_common.dir/Release/net_copy_common.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
build_vs/net_copy_gui.dir/Release/: net_copy_gui.exe.recipe
build_vs/net_copy_gui.dir/Release/net_copy_gui.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_vs/net_copy_server.dir/Release/: net_copy_server.exe.recipe
build_vs/net_copy_server.dir/Release/net_copy_server.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_vs/net_copy_service.dir/Release/: net_copy_service.exe.recipe
build_vs/net_copy_service.dir/Release/net_copy_service.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_vs/wolfssh.dir/Release/wolfssh.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  wolfssh.lastbuildstate
build_vs/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build_vs/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog
build_vs/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build_vs/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
docs/: architecture.md  installation.md  user_manual.md
include/: exceptions.h
include/auth/: auth_engine.h  user_db.h
include/client/: client.h
include/common/: bandwidth_limiter.h  bandwidth_monitor.h  chunk_size_manager.h  compression.h  fast_mem.h  utils.h
include/config/: client_defaults.h  common_defaults.h  config_parser.h  server_defaults.h
include/crypto/: aes_256_gcm_gpu.h  aes_ctr.h  chacha20_poly1305.h  crypto_engine.h  key_manager.h  mlkem.h  sha3.h  xor_cipher.h  xxhash64.h
include/daemon/: daemon.h
include/file/: file_manager.h  synchronization_manager.h
include/gui/: gui_server.h  index_html.h
include/logging/: audit_log.h  logger.h
include/network/: async_socket.h  event_loop.h  socket.h  ssh_server.h  windows_experimental.h
include/protocol/: message.h
include/server/: server.h
include/service/: windows_service.h
src/admin/: main.cpp
src/auth/: auth_engine.cpp  user_db.cpp
src/client/: client.cpp  main.cpp
src/common/: bandwidth_limiter.cpp  bandwidth_monitor.cpp  chunk_size_manager.cpp  compression.cpp  fast_mem.cpp  fast_memcpy_avx.s  fast_memcpy_masm.asm  utils.cpp
src/config/: config_parser.cpp
src/crypto/: aes_256_gcm_gpu.cu  aes_256_gcm_gpu_cpu.cpp  aes_ctr.cpp  chacha20_poly1305.cpp  crypto_engine.cpp  key_manager.cpp  mlkem.cpp  sha3.cpp  xor_cipher.cpp  xxhash64.cpp
src/daemon/: daemon.cpp
src/file/: file_manager.cpp  synchronization_manager.cpp
src/gui/: gui_server.cpp  main.cpp
src/keygen/: main.cpp
src/logging/: audit_log.cpp  logger.cpp
src/network/: async_socket.cpp  event_loop.cpp  socket.cpp  ssh_server.cpp  windows_experimental.cpp
src/protocol/: message.cpp
src/server/: main.cpp  server.cpp
src/service/: main.cpp  windows_service.cpp
